[package]
name = "tesla_auth"
version = "0.11.0"
description = "Tesla token generator"
homepage = "https://github.com/adriankumpf/tesla_auth"
repository = "https://github.com/adriankumpf/tesla_auth"
keywords = ["tesla-api", "oauth2", "webview", "cli"]
categories = ["command-line-utilities"]
authors = ["Adrian Kumpf"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
argh = "0.1.14"
log = "0.4.29"
muda = "0.17.1"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking" ] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
] }
serde_json = "1.0.149"
simple_logger = { version = "5.2.0", default-features = false, features = [
  "stderr",
] }
tao = { version = "0.34", default-features = false, features = ["rwh_06"] }
wry = { version = "0.54.2", features = ["devtools"] }

[build-dependencies]
static_vcruntime = "3.0.0"

[profile.release]
strip = "debuginfo"
opt-level = "z"     # Optimize for size.
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
